--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,8 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - python=3.7.4
-  - numpy>=1.16.4,<11.9.0
+  - python=3.8
+  - numpy>=1.16.4,<1.19.0
   - jax>=0.2.12
   - jaxlib>=0.1.65
   - pip
@@ -14,5 +14,5 @@ dependencies:
     - opencv-python>=4.4.0
     - Pillow>=7.2.0
     - tensorboard>=2.4.0
-    - tensorflow>=2.3.1
+    - tensorflow==2.3.1
     - gin-config
